[package]
name = "contor"
version = "0.1.0"
authors = ["Ian Purton <ian.purton@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.3"
actix-files = "0.6.0-beta.3"
dotenv = "0.15"
# For now gvet identity direct friom the repo untiul the update the
# crate. v0.3.1 was no good, it was using an old actix web.
actix-identity = { git = "https://github.com/actix/actix-extras/" }

# Actix Web Client - Used for the reverese proxy
awc = "3.0.0-beta.3"

env_logger = "0.7"
regex = "1" # For checking if we need to skip auth

# Used by the proxy
url = "2.0"

# HTML and Validation
markup = "0.11"
validator = { version = "0.12", features = ["derive"] }

bcrypt = "0.9.0"

# Use this for access to hcaptcha
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

# The database
sqlx = { version = "0.5", default-features = false,  features = [ "runtime-tokio-rustls", "postgres", "macros", "uuid" ] }
serde = "1"

# Use by authentication
futures = "0.3"

# For sending emails
lettre = "0.10.0-rc.3"

# Finger printing
lru_time_cache = "0.11.11"

[build-dependencies]
sha1 = "0.6"  # Use by build.rs for cache busting.

[dev-dependencies]
# WebDriver Library for UI testing.
thirtyfour = { version = "0", features = [ "reqwest-rustls-tls" ] }
tokio = { version = "1", features = ["macros"] }
rand = "0"