[package]
name = "barricade2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.6"
db = { version = "0.1.0", path = "../db" }
tokio = { version = "1.25.0", default-features = false, features = ["macros", "fs", "rt-multi-thread"] }
ui-components = { path = "../ui-components" }
